--- a/docs/2017-agra-aasr.Rmd
+++ b/docs/2017-agra-aasr.Rmd
@@ -9,10 +9,12 @@ link-citations: yes
 nocite: |
   @aasr_2016, @alvarez2014typology, @jayne2015agdev, @hazell2013urban, @douillet2014developing, @jordan2005eth, @omamo2006strategic, @bacou2015ethseg
 output: 
+  tufte::tufte_html:
+    toc: yes
+    toc_depth: 1
   html_notebook:
     fig_caption: yes
     fig_height: 5
-    theme: readable
     toc: yes
     toc_depth: 1
     toc_float: yes
