--- a/R/2017-agra-aasr.Rmd
+++ b/R/2017-agra-aasr.Rmd
@@ -7,7 +7,7 @@ bibliography: biblio.bib
 csl: apa.csl
 link-citations: yes
 nocite: |
-  @aasr_2016, @alvarez2014typology, @jayne2015agdev, @hazell2013urban, @douillet2014developing, @jordan2005eth, @omamo2006strategic, @bacou2015ethseg, @omamo2006strategic, @benin2016agricultural, @willy2015adaptation, @jayne2015africafarmland
+  @aasr_2016, @alvarez2014typology, @jayne2015agdev, @hazell2013urban, @douillet2014developing, @jordan2005eth, @omamo2006strategic, @bacou2015ethseg, @omamo2006strategic, @benin2016agricultural, @willy2015adaptation, @jayne2015africafarmland, @azzarri2016poverty
 output: 
   html_notebook:
     fig_caption: yes
@@ -18,6 +18,40 @@ output:
 ---
 
 --------------------------------------------------------------------------------------
+
+```{r setup, message=FALSE}
+
+library(data.table)
+library(foreign)
+library(stringr)
+library(rhandsontable)
+library(jsonlite)
+
+# Helper - Construct summary stats
+summaryTable <- function(dt) {
+  
+  dt.lbl <- data.table(
+    varCode=names(dt),
+    varLabel=attr(dt, "var.labels")
+  )  
+  tmp <- as.data.table(summary(dt))
+  tmp[, V1 := 1:7]
+  tmp <- dcast(tmp, V2~V1)
+  setnames(tmp, c("varCode", "Min.", "1st Qu.", "Median", "Mean", "3rd Qu.", "Max.", "NA's"))
+  tmp[, varCode := str_trim(varCode)]
+  
+  setkey(tmp, varCode)
+  setkey(dt.lbl, varCode)
+  dt.lbl <- tmp[dt.lbl]
+  dt.lbl <- dt.lbl[names(dt)]
+  setcolorder(dt.lbl, c(1,9,2:8))
+  
+  dt <- data.table(dt)
+  dt.lbl[, `Hist.` := sapply(dt, function(x) ifelse(class(x)=="numeric", toJSON(list(values=hist(x)$counts)), toJSON(NA)))]
+  return(dt.lbl)
+}
+
+```
 
 # Background
 
@@ -60,9 +94,126 @@ Many (unpublished and mostly country-level) studies have attempted to derive far
 
 ## Cross-Country Harmonized Variables
 
+Inventory and summarize the latest versions of IFPRI's harmonized variables. Some of these variables are also available (summarized) across districts and/or regions and/or gender.
+
+### Dataset #1 (Poverty, Land, Climate paper)
+
+```{r, message=FALSE}
+
+# Variables extracted for the Poverty, Land, Climate paper
+hh1 <- read.dta("../tmp/Final_SSA_hhPOV_ 6 Apr 2016.12.dta")
+
+# Show summaries
+hh1.lbl <- summaryTable(hh1)
+hh1 <- data.table(hh1)
+
+```
+
+This dataset contains `r dim(hh1)[2]` variables and `r nrow(hh1)` observations. The breakdown across countries and survey years is as follows, and variables are further described in the next table.
+
+```{r}
+
+# List surveys/years included in this set
+rhandsontable(hh1[, .(
+  Regions=uniqueN(svyL1Cd), 
+  Districts=uniqueN(paste(svyL1Cd, svyL2Cd)), 
+  Obs=.N), keyby=.(ISO3, Year=as.integer(year))],
+  rowHeaders=NULL)
+
+```
+      
+
+```{r}
+
+# Describe variables
+rhandsontable(hh1.lbl, rowHeaders=NULL) %>%
+  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline"))
+
+```
+
+### Dataset #2 (Farm variables for Ag Snapshots)
+
+The household-level file is corrupt (would need to contact IFPRI directly) but the variables are similar in the region-level file.
+
+```{r}
+
+# Load dataset #2
+hh2 <- read.dta("../tmp/Combined_Regdemovars13.12.dta")
+
+# Show summaries
+hh2.lbl <- summaryTable(hh2)
+hh2 <- data.table(hh2)
+
+
+```
+
+This dataset contains `r dim(hh2)[2]` variables. The breakdown across countries and survey years is as follows, and variables are further described in the next table.
+
+```{r}
+
+# List surveys/years included in this set
+rhandsontable(hh2[, .(
+  Regions=uniqueN(svyL1Cd), 
+  Obs=.N), keyby=.(ISO3, Year=as.integer(year))],
+  rowHeaders=NULL)
+
+```
+
+
+```{r}
+
+# Describe variables
+rhandsontable(hh2.lbl, rowHeaders=NULL) %>%
+  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline"))
+
+```
+
+
+### Dataset #3 (Panels for Resilience study)
+
+```{r, message=FALSE}
+
+# Load dataset #3
+hh3 <- read.dta("../tmp/Combined_4_Mel.12.dta")
+
+# Show summaries
+hh3.lbl <- summaryTable(hh3)
+hh3 <- data.table(hh3)
+
+```
+
+This dataset contains `r dim(hh3)[2]` variables and `r nrow(hh3)` observations. The breakdown across countries and survey years is as follows, and variables are further described in the next table.
+
+```{r}
+
+# List surveys/years included in this set
+rhandsontable(hh3[, .(
+  Regions=uniqueN(region), 
+  Districts=uniqueN(paste(region, district)), 
+  Obs=.N), keyby=.(ISO3, Year=as.integer(year), round)],
+  rowHeaders=NULL)
+
+```
+
+This dataset includes over 2,000 constructed climatic variables (SPEI, temperature, rainfall, PDSI, etc.). They are not shown in the variable summary below.
+
+```{r}
+
+# Describe variables
+rhandsontable(hh3.lbl[1:150], rowHeaders=NULL) %>%
+  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline"))
+
+```
+
+## Demographic and Health Surveys (harmonized)
+
 ## Other Panel Country-Level Variables
 
 
 
 # References
+
+Note that some of these references are unpublished materials, not to be cited.
+
+
 
