--- a/R/biblio.bib
+++ b/R/biblio.bib
@@ -1,21 +1,22 @@
 @TechReport{aasr_cn_2017,
   author =       {Hazell, Peter},
-  title =        {Concept Note - Africa Agriculture Status Report (AASR) 2017},
+  title =        {Concept Note - {A}frica {A}griculture {S}tatus {R}eport {(AASR)}
+                  2017},
   institution =  {AGRA},
   year =         2017
 }
 
 @Misc{hazell2013urban,
   author =       {Hazell, Peter},
-  title =        {Comparative Study of trends in Urbanization and Changes in Farm Size
-                  in Africa and Asia: Implications for Agricultural Research},
+  title =        {{Comparative Study of trends in Urbanization and Changes in Farm
+                  Size in Africa and Asia: Implications for Agricultural Research}},
   year =         2013
 }
 
 @Book{aasr_2016,
   editor =       {Jayne, Thomas S.},
-  title =        {Africa Agriculture Status Report 2016 - Progress towards
-                  Agricultural Transformation in Africa},
+  title =        {{Africa Agriculture Status Report 2016 - Progress towards
+                  Agricultural Transformation in Africa}},
   publisher =    {AGRA},
   year =         2016,
   url =          {https://agra.org/aasr2016/public/assr.pdf}
@@ -28,16 +29,16 @@
                   Tittonell, PA and Groot, Jeroen},
   year =         2014,
   publisher =    {Plant Sciences Group, Wageningen University},
-  annote =       {Report for the CGIAR Research Program on Integrated Systems for the
-                  Humid Tropics},
+  annote =       {{Report for the CGIAR Research Program on Integrated Systems for the
+                  Humid Tropics}},
   country =      {The Netherlands},
   url =
                   {https://cgspace.cgiar.org/bitstream/handle/10568/65374/typology_guidelines.pdf}
 }
 
 @Article{douillet2014developing,
-  title =        {Developing a typology of agricultural holdings for improved policy
-                  design: a preliminary case study of Malawi},
+  title =        {Developing a Typology of Agricultural Holdings for Improved Policy
+                  Design: a preliminary case study of {M}alawi},
   author =       {Douillet, Mathilde and Toulon, Ang{\'e}lique},
   journal =      {Foundation for World Agriculture and Rurality},
   year =         2014,
@@ -49,7 +50,7 @@
   author =       {Jayne, T.S. and Yeboah, Kwame and Traub, Lulama and Muyanga, Milu
                   and Chamberlin, Jordan and Meyer, Ferdinand},
   title =        {How can agricultural development strategies effectively reduce
-                  poverty in Africa?},
+                  poverty in {A}frica?},
   year =         2015,
   subtitle =     {Ag. Learning Lunch seminar, Bill and Melinda Gates Foundation},
   location =     {Seattle}
@@ -58,11 +59,11 @@
 @Unpublished{bacou2015ethseg,
   author =       {Bacou, Melanie and Magalhaes, Eduardo and Hazell, Peter and
                   Wood-Sichra, Ulrike},
-  title =        {Ethiopia Farm Segmentation Study},
+  title =        {{Ethiopia Farm Segmentation Study}},
   year =         2015,
-  subtitle =     {Draft Report for the Bill and Melinda Gates Foundation},
+  subtitle =     {Draft Report for the {B}ill and {M}elinda {G}ates {F}oundation},
   publisher =    {International Food Policy Research Institute},
-  url = {https://drive.google.com/open?id=0B1o4EXFzqcCzcUJSYlNfZzF5MGs}
+  url =          {https://drive.google.com/open?id=0B1o4EXFzqcCzcUJSYlNfZzF5MGs}
 }
 
 @Article{chamberlin06_devel_domain_ethiop,
@@ -71,15 +72,15 @@
   journaltitle = {EPTD Discussion Paper},
   number =       159,
   publisher =    {International Food Policy Research Institute},
-  title =        {Development Domains for Ethiopia: Capturing the Geographical Context
-                  of Smallholder Development Options},
+  title =        {{Development Domains for Ethiopia: Capturing the Geographical
+                  Context of Smallholder Development Options}},
   url =          {https://books.google.com/books?id=QL4GuO04daoC},
   year =         2006,
 }
 
 @Book{benin2016agricultural,
-  title =        {Agricultural productivity in Africa: Trends, patterns, and
-                  determinants},
+  title =        {{Agricultural productivity in Africa: Trends, patterns, and
+                  determinants}},
   author =       {Benin, Samuel and others},
   year =         2016,
   publisher =    {International Food Policy Research Institute},
@@ -91,8 +92,8 @@
 
 @article{jayne14_land_press_evolut_farmin_system,
   author =       {T.S. Jayne and Jordan Chamberlin and Derek D. Headey},
-  title =        {Land Pressures, the Evolution of Farming Systems, and Development
-                  Strategies in Africa: A Synthesis},
+  title =        {{Land Pressures, the Evolution of Farming Systems, and Development
+                  Strategies in Africa: A Synthesis}},
   journal =      {Food Policy},
   volume =       48,
   number =       {nil},
@@ -104,7 +105,7 @@
 }
 
 @techreport{willy2015adaptation,
-  title =        {Adaptation to Rising Population Density: Voices from Rural Kenya},
+  title =        {{Adaptation to Rising Population Density: Voices from Rural Kenya}},
   author =       {Willy, Daniel Kyalo and Muyanga, Milu and Jayne, TS and others},
   publisher =    {Tegemeo Institute of Agricultural Policy {and} Development},
   journal =      {WPS},
@@ -115,7 +116,7 @@
 }
 
 @inproceedings{jayne2015africafarmland,
-  title =        {Africa’s Changing Farmland Ownership: Causes and Consequences},
+  title =        {{Africa’s Changing Farmland Ownership: Causes and Consequences}},
   author =       {Jayne, Thomas S and Chamberlin, Jordan and Traub, Lulama and Sitko,
                   Nicholas and Muyanga, Milu and Yeboah, Kwame and Nkonde, Chewe and
                   Anseeuw, Ward and Chapoto, Antony and Kachule, Richard and others},
@@ -123,4 +124,16 @@
                   Agricultural Economists, Milan, Italy, August 2015},
   year =         2015,
   url =          {http://pdf.usaid.gov/pdf_docs/PA00KMWX.pdf}
+}
+
+@Unpublished{azzarri2016poverty,
+  author =       {Azzarri, Carlo and Signorelli, Sara and Bacou, Melanie},
+  title =        {{Poverty, Land, and Climate in Africa South of the Sahara: an
+                  empirical analysis}},
+  note =         {DRAFT, April 2016},
+  year =         2016,
+  publisher =    {International Food Policy Research Institute},
+  url =          {https://github.com/mbacou/ssa-geospat/blob/master/docs/Azzarri
+                  (2016) Poverty, land, and climate in Africa south of the Sahara, an
+                  empirical analysis.pdf}
 }
