--- a/R/2017-agra-aasr.Rmd
+++ b/R/2017-agra-aasr.Rmd
@@ -1,31 +1,38 @@
 ---
-title:  "Business-oriented Typology and Characterization of Agriculture in SSA"
-subtitle: "A multi-scale and cross-time framework"
-author: "[Melanie Bacou](http://github.com/mbacou) for BMGF"
-date:   Last updated on `r Sys.Date()`. DRAFT, DO NOT USE OR CITE.
-bibliography: biblio.bib
-csl: apa.csl
-link-citations: yes
-nocite: |
-  @aasr_2016, @alvarez2014typology, @jayne2015agdev, @hazell2013urban, @douillet2014developing, @jordan2005eth, @omamo2006strategic, @bacou2015ethseg, @omamo2006strategic, @benin2016agricultural, @willy2015adaptation, @jayne2015africafarmland, @azzarri2016poverty
-output: 
+title: "Business-oriented Typology and Characterization of Agriculture in SSA"
+author: '[Melanie Bacou](http://github.com/mbacou) for BMGF'
+date: "Last updated on `r Sys.Date()`. DRAFT, DO NOT USE OR CITE."
+output:
   html_notebook:
     fig_caption: yes
     fig_height: 5
     toc: yes
     toc_depth: 3
     toc_float: yes
+link-citations: yes
+nocite: |
+  @aasr_2016, @alvarez2014typology, @jayne2015agdev, @hazell2013urban, @douillet2014developing, @jordan2005eth, @omamo2006strategic, @bacou2015ethseg, @omamo2006strategic, @benin2016agricultural, @willy2015adaptation, @jayne2015africafarmland
+csl: apa.csl
+subtitle: A multi-scale and cross-time framework
+bibliography: biblio.bib
 ---
 
 --------------------------------------------------------------------------------------
 
-```{r setup, message=FALSE}
+```{r, message=FALSE}
 
 library(data.table)
 library(foreign)
 library(stringr)
 library(rhandsontable)
 library(jsonlite)
+
+load("../tmp/2017-agra-aasr.RData")
+
+```
+
+
+```{r, eval=FALSE, collapse=TRUE}
 
 # Helper - Construct summary stats
 summaryTable <- function(dt) {
@@ -47,9 +54,71 @@ summaryTable <- function(dt) {
   setcolorder(dt.lbl, c(1,9,2:8))
   
   dt <- data.table(dt)
-  dt.lbl[, `Hist.` := sapply(dt, function(x) ifelse(class(x)=="numeric", toJSON(list(values=hist(x)$counts)), toJSON(NA)))]
+  dt.lbl[, `Hist.` := sapply(dt, function(x) ifelse(class(x)=="numeric", toJSON(list(values=hist(x, plot=FALSE)$counts)), toJSON(NA)))]
   return(dt.lbl)
 }
+
+# Variables extracted for the Poverty, Land, Climate paper
+hh1 <- read.dta("../tmp/Final_SSA_hhPOV_ 6 Apr 2016.12.dta")
+hh.dim <- list(hh1=dim(hh1))
+
+# Show summaries
+hh1.lbl <- summaryTable(hh1)
+hh1 <- data.table(hh1)
+
+# List surveys/years included in this set
+dt1sum <- rhandsontable(hh1[, .(
+  Regions=uniqueN(svyL1Cd), 
+  Districts=uniqueN(paste(svyL1Cd, svyL2Cd)), 
+  Obs=.N), keyby=.(ISO3, Year=as.integer(year))],
+  rowHeaders=NULL)
+rm(hh1)
+
+# Describe variables
+dt1var <- rhandsontable(hh1.lbl, rowHeaders=NULL) %>%
+  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline"))
+
+# Load dataset #2
+hh2 <- read.dta("../tmp/Combined_Regdemovars13.12.dta")
+hh.dim$hh2 <- dim(hh2)
+
+# Show summaries
+hh2.lbl <- summaryTable(hh2)
+hh2 <- data.table(hh2)
+
+# List surveys/years included in this set
+dt2sum <- rhandsontable(hh2[, .(
+  Regions=uniqueN(svyL1Cd), 
+  Obs=.N), keyby=.(ISO3, Year=as.integer(year))],
+  rowHeaders=NULL)
+rm(hh2)
+
+# Describe variables
+dt2var <- rhandsontable(hh2.lbl, rowHeaders=NULL) %>%
+  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline"))
+
+# Load dataset #3
+hh3 <- read.dta("../tmp/Combined_4_Mel.12.dta")
+hh.dim$hh3 <- dim(hh3)
+
+# Show summaries
+hh3.lbl <- summaryTable(hh3)
+hh3 <- data.table(hh3)
+
+# List surveys/years included in this set
+dt3sum <- rhandsontable(hh3[, .(
+  Regions=uniqueN(region), 
+  Districts=uniqueN(paste(region, district)), 
+  Obs=.N), keyby=.(ISO3, Year=as.integer(year), round)],
+  rowHeaders=NULL)
+rm(hh3)
+
+# Describe variables
+dt3var <- rhandsontable(hh3.lbl[1:150], rowHeaders=NULL) %>%
+  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline"))
+
+# Save workspace
+save.image("../tmp/2017-agra-aasr.RData")
 
 ```
 
@@ -98,36 +167,18 @@ Inventory and summarize the latest versions of IFPRI's harmonized variables. Som
 
 ### Dataset #1 (Poverty, Land, Climate paper)
 
-```{r, message=FALSE}
-
-# Variables extracted for the Poverty, Land, Climate paper
-hh1 <- read.dta("../tmp/Final_SSA_hhPOV_ 6 Apr 2016.12.dta")
-
-# Show summaries
-hh1.lbl <- summaryTable(hh1)
-hh1 <- data.table(hh1)
-
-```
-
-This dataset contains `r dim(hh1)[2]` variables and `r nrow(hh1)` observations. The breakdown across countries and survey years is as follows, and variables are further described in the next table.
+This dataset contains `r hh.dim$hh1[2]` variables and `r hh.dim$hh1[1]` observations. The breakdown across countries and survey years is as follows, and variables are further described in the next table. Many of these variables are also document in [@azzarri2016poverty].
 
 ```{r}
 
-# List surveys/years included in this set
-rhandsontable(hh1[, .(
-  Regions=uniqueN(svyL1Cd), 
-  Districts=uniqueN(paste(svyL1Cd, svyL2Cd)), 
-  Obs=.N), keyby=.(ISO3, Year=as.integer(year))],
-  rowHeaders=NULL)
+dt1sum
 
 ```
       
 
 ```{r}
 
-# Describe variables
-rhandsontable(hh1.lbl, rowHeaders=NULL) %>%
-  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline"))
+dt1var
 
 ```
 
@@ -135,63 +186,30 @@ rhandsontable(hh1.lbl, rowHeaders=NULL) %>%
 
 The household-level file is corrupt (would need to contact IFPRI directly) but the variables are similar in the region-level file.
 
-```{r}
-
-# Load dataset #2
-hh2 <- read.dta("../tmp/Combined_Regdemovars13.12.dta")
-
-# Show summaries
-hh2.lbl <- summaryTable(hh2)
-hh2 <- data.table(hh2)
-
-
-```
-
-This dataset contains `r dim(hh2)[2]` variables. The breakdown across countries and survey years is as follows, and variables are further described in the next table.
+This dataset contains `r hh.dim$hh2[2]` variables. The breakdown across countries and survey years is as follows, and variables are further described in the next table.
 
 ```{r}
 
-# List surveys/years included in this set
-rhandsontable(hh2[, .(
-  Regions=uniqueN(svyL1Cd), 
-  Obs=.N), keyby=.(ISO3, Year=as.integer(year))],
-  rowHeaders=NULL)
+dt2sum
 
 ```
 
 
 ```{r}
 
-# Describe variables
-rhandsontable(hh2.lbl, rowHeaders=NULL) %>%
-  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline"))
+dt2var
 
 ```
 
 
 ### Dataset #3 (Panels for Resilience study)
 
-```{r, message=FALSE}
 
-# Load dataset #3
-hh3 <- read.dta("../tmp/Combined_4_Mel.12.dta")
-
-# Show summaries
-hh3.lbl <- summaryTable(hh3)
-hh3 <- data.table(hh3)
-
-```
-
-This dataset contains `r dim(hh3)[2]` variables and `r nrow(hh3)` observations. The breakdown across countries and survey years is as follows, and variables are further described in the next table.
+This dataset contains `r hh.dim$hh3[2]` variables and `r hh.dim$hh3[2]`  observations. The breakdown across countries and survey years is as follows, and variables are further described in the next table.
 
 ```{r}
 
-# List surveys/years included in this set
-rhandsontable(hh3[, .(
-  Regions=uniqueN(region), 
-  Districts=uniqueN(paste(region, district)), 
-  Obs=.N), keyby=.(ISO3, Year=as.integer(year), round)],
-  rowHeaders=NULL)
+dt3sum
 
 ```
 
@@ -199,13 +217,12 @@ This dataset includes over 2,000 constructed climatic variables (SPEI, temperatu
 
 ```{r}
 
-# Describe variables
-rhandsontable(hh3.lbl[1:150], rowHeaders=NULL) %>%
-  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline"))
+dt3var
 
 ```
 
 ## Demographic and Health Surveys (harmonized)
+
 
 ## Other Country-Level Panel Variables
 
@@ -214,6 +231,5 @@ rhandsontable(hh3.lbl[1:150], rowHeaders=NULL) %>%
 # References
 
 Note that some of these references are unpublished materials, not to be cited.
-
 
 
