--- a/R/biblio.bib
+++ b/R/biblio.bib
@@ -133,7 +133,5 @@
   note =         {DRAFT, April 2016},
   year =         2016,
   publisher =    {International Food Policy Research Institute},
-  url =          {https://github.com/mbacou/ssa-geospat/blob/master/docs/Azzarri
-                  (2016) Poverty, land, and climate in Africa south of the Sahara, an
-                  empirical analysis.pdf}
+  url =          {https://github.com/mbacou/ssa-geospat/raw/master/docs/Azzarri%20(2016)%20Poverty%2C%20land%2C%20and%20climate%20in%20Africa%20south%20of%20the%20Sahara%2C%20an%20empirical%20analysis.pdf}
 }
