--- a/R/biblio.bib
+++ b/R/biblio.bib
@@ -49,11 +49,12 @@
 @Misc{jayne2015agdev,
   author =       {Jayne, T.S. and Yeboah, Kwame and Traub, Lulama and Muyanga, Milu
                   and Chamberlin, Jordan and Meyer, Ferdinand},
-  title =        {How can agricultural development strategies effectively reduce
-                  poverty in {A}frica?},
+  title =        {{How can Agricultural Development Strategies Effectively Reduce
+                  Poverty in Africa?}},
   year =         2015,
-  subtitle =     {Ag. Learning Lunch seminar, Bill and Melinda Gates Foundation},
-  location =     {Seattle}
+  subtitle =     {{Ag. Learning Lunch seminar, Bill and Melinda Gates Foundation}},
+  location =     {Seattle},
+  url =          {https://github.com/mbacou/ssa-geospat/raw/master/docs/Jayne%20(2015)%20Farmer%20Typology.ppt}
 }
 
 @Unpublished{bacou2015ethseg,
@@ -133,5 +134,6 @@
   note =         {DRAFT, April 2016},
   year =         2016,
   publisher =    {International Food Policy Research Institute},
-  url =          {https://github.com/mbacou/ssa-geospat/raw/master/docs/Azzarri%20(2016)%20Poverty%2C%20land%2C%20and%20climate%20in%20Africa%20south%20of%20the%20Sahara%2C%20an%20empirical%20analysis.pdf}
+  url =
+                  {https://github.com/mbacou/ssa-geospat/raw/master/docs/Azzarri%20(2016)%20Poverty%2C%20land%2C%20and%20climate%20in%20Africa%20south%20of%20the%20Sahara%2C%20an%20empirical%20analysis.pdf}
 }
