--- a/R/biblio.bib
+++ b/R/biblio.bib
@@ -54,7 +54,8 @@
   year =         2015,
   subtitle =     {{Ag. Learning Lunch seminar, Bill and Melinda Gates Foundation}},
   location =     {Seattle},
-  url =          {https://github.com/mbacou/ssa-geospat/raw/master/docs/Jayne%20(2015)%20Farmer%20Typology.ppt}
+  url =
+                  {https://github.com/mbacou/ssa-geospat/raw/master/docs/Jayne%20(2015)%20Farmer%20Typology.ppt}
 }
 
 @Unpublished{bacou2015ethseg,
@@ -136,4 +137,17 @@
   publisher =    {International Food Policy Research Institute},
   url =
                   {https://github.com/mbacou/ssa-geospat/raw/master/docs/Azzarri%20(2016)%20Poverty%2C%20land%2C%20and%20climate%20in%20Africa%20south%20of%20the%20Sahara%2C%20an%20empirical%20analysis.pdf}
+}
+
+@InCollection{diao2017ghana,
+  author =       {Diao, Xinshen and Fang, Peixun and Magalhaes, Eduardo and Pahl,
+                  Stefan and and Silver, Jed.},
+  title =        {{Cities and rural transformation: A spatial analysis of rural youth
+                  livelihoods in Ghana}},
+  booktitle =    {IFPRI Discussion Paper},
+  publisher =    {International Food Policy Research Institute},
+  year =         2017,
+  volume =       {1599},
+  city =         {Washington, DC},
+  url =          {http://ebrary.ifpri.org/cdm/ref/collection/p15738coll2/id/13105}
 }
