--- a/R/2017-agra-aasr.Rmd
+++ b/R/2017-agra-aasr.Rmd
@@ -11,7 +11,7 @@ output:
     toc_float: yes
 link-citations: yes
 nocite: |
-  @aasr_2016, @alvarez2014typology, @jayne2015agdev, @hazell2013urban, @douillet2014developing, @jordan2005eth, @omamo2006strategic, @bacou2015ethseg, @omamo2006strategic, @benin2016agricultural, @willy2015adaptation, @jayne2015africafarmland
+  @aasr_2016, @alvarez2014typology, @jayne2015agdev, @hazell2013urban, @douillet2014developing, @jordan2005eth, @omamo2006strategic, @bacou2015ethseg, @omamo2006strategic, @benin2016agricultural, @willy2015adaptation, @jayne2015africafarmland, @diao2017ghana
 csl: apa.csl
 subtitle: A multi-scale and cross-time framework
 bibliography: biblio.bib
