--- a/R/2017-agra-aasr.Rmd
+++ b/R/2017-agra-aasr.Rmd
@@ -1,20 +1,24 @@
 ---
 title: "Business-oriented Typology and Characterization of Agriculture in SSA"
+subtitle: A multi-scale and cross-time framework
 author: '[Melanie Bacou](http://github.com/mbacou) for BMGF'
 date: "Last updated on `r Sys.Date()`. DRAFT, DO NOT USE OR CITE."
 output:
   html_notebook:
-    fig_caption: yes
-    fig_height: 5
     toc: yes
     toc_depth: 3
     toc_float: yes
-link-citations: yes
+  tufte::tufte_html:
+    tufte_variant: envisioned  
+    toc: yes
+    toc_depth: 2
+fig_caption: yes
+fig_height: 5
+bibliography: biblio.bib
+csl: apa.csl
+link-citations: no
 nocite: |
   @aasr_2016, @alvarez2014typology, @jayne2015agdev, @hazell2013urban, @douillet2014developing, @jordan2005eth, @omamo2006strategic, @bacou2015ethseg, @omamo2006strategic, @benin2016agricultural, @willy2015adaptation, @jayne2015africafarmland, @diao2017ghana
-csl: apa.csl
-subtitle: A multi-scale and cross-time framework
-bibliography: biblio.bib
 ---
 
 --------------------------------------------------------------------------------------
@@ -72,12 +76,13 @@ dt1sum <- rhandsontable(hh1[, .(
   Regions=uniqueN(svyL1Cd), 
   Districts=uniqueN(paste(svyL1Cd, svyL2Cd)), 
   Obs=.N), keyby=.(ISO3, Year=as.integer(year))],
-  rowHeaders=NULL)
+  rowHeaders=NULL, height=600)
 rm(hh1)
 
 # Describe variables
-dt1var <- rhandsontable(hh1.lbl, rowHeaders=NULL) %>%
-  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline"))
+dt1var <- rhandsontable(hh1.lbl, rowHeaders=NULL, height=600) %>%
+  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline")) %>%
+  hot_cols(fixedColumnsLeft = 1)
 
 # Load dataset #2 (HarvestChoice Ag Snapshots)
 hh2 <- read.dta("../tmp/Combined_Regdemovars13.12.dta")
@@ -91,12 +96,13 @@ hh2 <- data.table(hh2)
 dt2sum <- rhandsontable(hh2[, .(
   Regions=uniqueN(svyL1Cd), 
   Obs=.N), keyby=.(ISO3, Year=as.integer(year))],
-  rowHeaders=NULL)
+  rowHeaders=NULL, height=600)
 rm(hh2)
 
 # Describe variables
-dt2var <- rhandsontable(hh2.lbl, rowHeaders=NULL) %>%
-  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline"))
+dt2var <- rhandsontable(hh2.lbl, rowHeaders=NULL, height=600) %>%
+  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline")) %>%
+  hot_cols(fixedColumnsLeft = 1)
 
 # Load dataset #3 (Beliyou's Resilience Study)
 hh3 <- read.dta("../tmp/Combined_4_Mel.12.dta")
@@ -111,12 +117,13 @@ dt3sum <- rhandsontable(hh3[, .(
   Regions=uniqueN(region), 
   Districts=uniqueN(paste(region, district)), 
   Obs=.N), keyby=.(ISO3, Year=as.integer(year), round)],
-  rowHeaders=NULL)
+  rowHeaders=NULL, height=600)
 rm(hh3)
 
 # Describe variables
-dt3var <- rhandsontable(hh3.lbl[1:150], rowHeaders=NULL) %>%
-  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline"))
+dt3var <- rhandsontable(hh3.lbl[1:150], rowHeaders=NULL, height=600) %>%
+  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline")) %>%
+  hot_cols(fixedColumnsLeft = 1)
 
 # Load dataset #4 (SSA Poverty)
 hh4 <- read.dta("../tmp/SSApoverty_Dist_forGWR.12.dta")
@@ -146,12 +153,13 @@ dt4sum <- rhandsontable(hh4[, .(
   Regions=uniqueN(svyL1Cd), 
   Districts=uniqueN(paste(svyL1Cd, svyL2Cd)), 
   Obs=.N), keyby=.(ISO3, Year=as.integer(year))],
-  rowHeaders=NULL)
+  rowHeaders=NULL, height=600)
 rm(hh4)
 
 # Describe variables
-dt4var <- rhandsontable(hh4.lbl, rowHeaders=NULL) %>%
-  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline"))
+dt4var <- rhandsontable(hh4.lbl, rowHeaders=NULL, height=600) %>%
+  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline")) %>%
+  hot_cols(fixedColumnsLeft = 1)
 
 
 # Load GHA GLSS rounds (Eduardo)
@@ -250,7 +258,7 @@ This dataset contains `r hh.dim$hh3[2]` variables and `r hh.dim$hh3[1]`  observa
 dt3sum
 
 ```
-.  
+
 This dataset also includes over 2,000 constructed climatic variables (monthly SPEI, temperature, rainfall, PDSI, etc.). To save space they are not shown in the variable summary below.
 
 ```{r}
@@ -284,11 +292,14 @@ IFPRI holds cross-country harmonized variables from the latest DHS. Complete met
 
 ### Ghana GLSS Rounds
 
+(from Eduardo)
+
 ### Nigeria Farm Segmentation Study
 
 
 # References
 
 Note that some of these references are unpublished materials, not to be cited.
+
 
 
