--- a/R/2017-agra-aasr.Rmd
+++ b/R/2017-agra-aasr.Rmd
@@ -16,7 +16,7 @@ fig_caption: yes
 fig_height: 5
 bibliography: biblio.bib
 csl: apa.csl
-link-citations: no
+link-citations: yes
 nocite: |
   @aasr_2016, @alvarez2014typology, @jayne2015agdev, @hazell2013urban, @douillet2014developing, @jordan2005eth, @omamo2006strategic, @bacou2015ethseg, @omamo2006strategic, @benin2016agricultural, @willy2015adaptation, @jayne2015africafarmland, @diao2017ghana
 ---
