--- a/R/2017-agra-aasr.Rmd
+++ b/R/2017-agra-aasr.Rmd
@@ -4,10 +4,10 @@ subtitle: A multi-scale and cross-time framework
 author: '[Melanie Bacou](http://github.com/mbacou) for BMGF'
 date: "Last updated on `r Sys.Date()`. DRAFT, DO NOT USE OR CITE."
 output:
-  html_notebook:
-    toc: yes
+  html_document:
     toc_depth: 3
     toc_float: yes
+    toc: yes
     code_folding: hide
   tufte::tufte_html:
     tufte_variant: envisioned  
@@ -24,7 +24,7 @@ nocite: |
 
 --------------------------------------------------------------------------------------
 
-```{r, echo=FALSE}
+```{r setup, echo=FALSE}
 
 library(data.table)
 library(rhandsontable)
