--- a/R/2017-agra-aasr.Rmd
+++ b/R/2017-agra-aasr.Rmd
@@ -1,25 +1,22 @@
 ---
 title: "Business-oriented Typology and Characterization of Agriculture in SSA"
-subtitle: A multi-scale and cross-time framework
 author: '[Melanie Bacou](http://github.com/mbacou) for BMGF'
 date: "Last updated on `r Sys.Date()`. DRAFT, DO NOT USE OR CITE."
 output:
   html_document:
+    code_folding: hide
+    toc: yes
     toc_depth: 3
     toc_float: yes
-    toc: yes
-    code_folding: hide
-  tufte::tufte_html:
-    tufte_variant: envisioned  
-    toc: yes
-    toc_depth: 2
+csl: apa.csl
 fig_caption: yes
 fig_height: 5
-bibliography: biblio.bib
-csl: apa.csl
 link-citations: yes
 nocite: |
   @aasr_2016, @alvarez2014typology, @jayne2015agdev, @hazell2013urban, @douillet2014developing, @jordan2005eth, @omamo2006strategic, @bacou2015ethseg, @omamo2006strategic, @benin2016agricultural, @willy2015adaptation, @jayne2015africafarmland, @diao2017ghana
+css: fix.css
+subtitle: A multi-scale and cross-time framework
+bibliography: biblio.bib
 ---
 
 --------------------------------------------------------------------------------------
@@ -64,9 +61,11 @@ summaryTable <- function(dt) {
   setkey(dt.lbl, varCode)
   dt.lbl <- tmp[dt.lbl]
   dt.lbl <- dt.lbl[names(dt)]
-  setcolorder(dt.lbl, c(1,9,2:8))
   
   dt.lbl[, `Hist.` := sapply(dt, function(x) ifelse(class(x)=="numeric", toJSON(list(values=hist(x, plot=FALSE)$counts)), toJSON(NA)))]
+  
+  setcolorder(dt.lbl, c(1,9,10,2:8))
+  
   return(dt.lbl)
 }
 #####################################################################################
@@ -80,17 +79,17 @@ hh1.lbl <- summaryTable(hh1)
 hh1 <- data.table(hh1)
 
 # List surveys/years included in this set
-dt1sum <- rhandsontable(hh1[, .(
+dt1.sum <- hh1[, .(
   Regions=uniqueN(svyL1Cd), 
   Districts=uniqueN(paste(svyL1Cd, svyL2Cd)), 
-  Obs=.N), keyby=.(ISO3, Year=as.integer(year))],
-  rowHeaders=NULL, height=600)
+  Obs=.N), keyby=.(ISO3, Year=as.integer(year))]
+dt1sum <- rhandsontable(dt1.sum, rowHeaders=NULL, height=600, width="auto")
 rm(hh1)
 
 # Describe variables
-dt1var <- rhandsontable(hh1.lbl, rowHeaders=NULL, height=600) %>%
-  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline")) %>%
-  hot_cols(fixedColumnsLeft = 1)
+dt1var <- rhandsontable(hh1.lbl, rowHeaders=NULL, height=600, width="auto") %>%
+  hot_col("Hist.", renderer=htmlwidgets::JS("renderSparkline")) %>%
+  hot_cols(fixedColumnsLeft=1)
 
 # Load dataset #2 (HarvestChoice Ag Snapshots)
 hh2 <- read.dta("./tmp/Combined_Regdemovars13.12.dta")
@@ -101,16 +100,16 @@ hh2.lbl <- summaryTable(hh2)
 hh2 <- data.table(hh2)
 
 # List surveys/years included in this set
-dt2sum <- rhandsontable(hh2[, .(
+dt2.sum <- hh2[, .(
   Regions=uniqueN(svyL1Cd), 
-  Obs=.N), keyby=.(ISO3, Year=as.integer(year))],
-  rowHeaders=NULL, height=600)
+  Obs=.N), keyby=.(ISO3, Year=as.integer(year))]
+dt2sum <- rhandsontable(dt2.sum, rowHeaders=NULL, height=600, width="auto")
 rm(hh2)
 
 # Describe variables
-dt2var <- rhandsontable(hh2.lbl, rowHeaders=NULL, height=600) %>%
-  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline")) %>%
-  hot_cols(fixedColumnsLeft = 1)
+dt2var <- rhandsontable(hh2.lbl, rowHeaders=NULL, height=600, width="auto") %>%
+  hot_col("Hist.", renderer=htmlwidgets::JS("renderSparkline")) %>%
+  hot_cols(fixedColumnsLeft=1)
 
 # Load dataset #3 (Beliyou's Resilience Study)
 hh3 <- read.dta("./tmp/Combined_4_Mel.12.dta")
@@ -121,17 +120,17 @@ hh3.lbl <- summaryTable(hh3)
 hh3 <- data.table(hh3)
 
 # List surveys/years included in this set
-dt3sum <- rhandsontable(hh3[, .(
+dt3.sum <- hh3[, .(
   Regions=uniqueN(region), 
   Districts=uniqueN(paste(region, district)), 
-  Obs=.N), keyby=.(ISO3, Year=as.integer(year), round)],
-  rowHeaders=NULL, height=600)
+  Obs=.N), keyby=.(ISO3, Year=as.integer(year), round)]
+dt3sum <- rhandsontable(dt3.sum, rowHeaders=NULL, height=600, width="auto")
 rm(hh3)
 
 # Describe variables
-dt3var <- rhandsontable(hh3.lbl[1:150], rowHeaders=NULL, height=600) %>%
-  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline")) %>%
-  hot_cols(fixedColumnsLeft = 1)
+dt3var <- rhandsontable(hh3.lbl[1:150], rowHeaders=NULL, height=600, width="auto") %>%
+  hot_col("Hist.", renderer=htmlwidgets::JS("renderSparkline")) %>%
+  hot_cols(fixedColumnsLeft=1)
 
 # Load dataset #4 (SSA Poverty)
 hh4 <- read.dta("./tmp/SSApoverty_Dist_forGWR.12.dta")
@@ -157,17 +156,17 @@ hh4.lbl <- summaryTable(hh4)
 hh4 <- data.table(hh4)
 
 # List surveys/years included in this set
-dt4sum <- rhandsontable(hh4[, .(
+dt4.sum <- hh4[, .(
   Regions=uniqueN(svyL1Cd), 
   Districts=uniqueN(paste(svyL1Cd, svyL2Cd)), 
-  Obs=.N), keyby=.(ISO3, Year=as.integer(year))],
-  rowHeaders=NULL, height=600)
+  Obs=.N), keyby=.(ISO3, Year=as.integer(year))]
+dt4sum <- rhandsontable(dt4.sum, rowHeaders=NULL, height=600, width="auto")
 rm(hh4)
 
 # Describe variables
-dt4var <- rhandsontable(hh4.lbl, rowHeaders=NULL, height=600) %>%
-  hot_col("Hist.", renderer = htmlwidgets::JS("renderSparkline")) %>%
-  hot_cols(fixedColumnsLeft = 1)
+dt4var <- rhandsontable(hh4.lbl, rowHeaders=NULL, height=600, width="auto") %>%
+  hot_col("Hist.", renderer=htmlwidgets::JS("renderSparkline")) %>%
+  hot_cols(fixedColumnsLeft=1)
 
 
 # Load GHA GLSS rounds (Eduardo)
