--- a/index.Rmd
+++ b/index.Rmd
@@ -1,13 +1,12 @@
 ---
 title: "Panel Analyses for sub-Saharan Africa"
 author: "[Melanie Bacou](http://github.com/mbacou)"
-output:
-  tint::tintHtml: 
-     self_contained: TRUE
+output: html_document
+css: ./R/fix.css
 ---
 
 Work in progress:
 
-* [AGRA AASR 2017 chapter](./R/2017-agra-aasr.nb.html) for BMGF
+* [AGRA AASR 2017 chapter](./R/2017-agra-aasr.html) for BMGF
 * [Tanzania resilience study](./R/2016-resilience.nb.html) for IFPRI
 * [Poverty GWR for SSA](./R/2016-poverty.nb.html) for IFPRI
